# NavGreen

./: .gitignore  .mcp.json  404.html  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.yaml  agv_greenhouse.repos  index.html  mkdocs.yml  sitemap.xml
src/agv_behaviors/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_behaviors/config/: behavior_params.yaml
src/agv_behaviors/src/: behavior_executor_node.cpp
src/agv_behaviors/test/: test_bt_loading.cpp
src/agv_behaviors/trees/: navigate_with_recovery.xml  single_waypoint.xml  waypoint_patrol.xml
src/agv_bringup/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_bringup/config/: README.md  cuvslam_greenhouse.yaml  cuvslam_no_tf.yaml  cyclonedds_hil.xml  cyclonedds_production.xml
src/agv_bringup/launch/: agv_ekf_local_test.launch.py  agv_full.launch.py  agv_fusion.launch.py  agv_hil.launch.py  agv_hil_full.launch.py  agv_mapping.launch.py  agv_robot_core.launch.py  agv_teleop.launch.py
src/agv_bringup/scripts/: agv_healthcheck.sh  agv_start.sh  agv_watchdog.sh  caster_tuning.py  field_test.py  setup_production_network.sh
src/agv_bringup/systemd/: agv-healthcheck.service  agv-watchdog.service  agv.service  install.sh
src/agv_description/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_description/config/: robot_geometry.yaml  robot_params.yaml
src/agv_description/launch/: description.launch.py  display.launch.py
src/agv_description/rviz/: agv.rviz
src/agv_description/test/: test_urdf_valid.py
src/agv_description/urdf/: agv_base.xacro  agv_full.urdf.xacro  wheel.xacro
src/agv_factor_graph/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_factor_graph/config/: factor_graph_params.yaml
src/agv_factor_graph/launch/: factor_graph.launch.py
src/agv_factor_graph/src/: factor_graph_node.cpp
src/agv_hil_bridges/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_hil_bridges/config/: hil_bridges_params.yaml
src/agv_hil_bridges/launch/: hil_bridges.launch.py
src/agv_hil_bridges/scripts/: apriltag_sim_shim.py  gt_to_wheel_odom.py  joint_states_to_wheel_odom.py  sim_obstacle_relay.py  vslam_fallback_relay.py
src/agv_hw_interface/: CLAUDE.md  CMakeLists.txt  TASK.yaml  agv_hw_interface_plugin.xml  package.xml
src/agv_hw_interface/config/: agv_controllers.yaml
src/agv_hw_interface/launch/: agv_ros2control.launch.py  agv_ros2control_mock.launch.py
src/agv_hw_interface/src/: agv_diff_drive_system.cpp  can_socket.cpp
src/agv_hw_interface/test/: test_kinematics.cpp
src/agv_hw_interface/urdf/: agv_ros2control.urdf.xacro
src/agv_image_server/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_image_server/src/: image_server_node.cpp
src/agv_image_server/test/: test_image_pipeline.cpp
src/agv_integration_tests/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_integration_tests/scripts/: iteration_analysis_rules.yaml  iteration_report.py  map_diff.py
src/agv_integration_tests/test/: mapping_trajectory.yaml  mode_transitions_oracle.py  test_dispatch_logic.py  test_e_stop.py  test_ekf_frames.py  test_full_flow.py  test_harness_oracles.py  test_iteration_report.py  test_mode_transitions_oracle.py  test_nav2_probe.py  test_service_availability.py  test_tf_tree.py  test_topic_availability.py  test_waypoint_precision.py  waypoints_20.yaml  waypoints_corridor_11.yaml  waypoints_corridor_17.yaml  waypoints_gap_10.yaml  waypoints_gap_6.yaml  waypoints_tagged_v1.yaml  waypoints_tagged_v2.yaml  waypoints_tagged_v3.yaml  waypoints_tagged_v4.yaml  waypoints_tagged_v5.yaml
src/agv_interfaces/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_interfaces/msg/: Mission.msg  RailStartPoint.msg  SafetyStatus.msg  Waypoint.msg
src/agv_interfaces/srv/: ExecuteMission.srv  ListMissions.srv  ListRailStarts.srv  RailApproach.srv  SaveWaypoint.srv  UpdateZone.srv
src/agv_localization_init/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_localization_init/config/: auto_init_params.yaml
src/agv_localization_init/launch/: auto_init.launch.py
src/agv_localization_init/src/: auto_init_orchestrator_node.cpp
src/agv_map_manager/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_map_manager/config/: map_manager_params.yaml
src/agv_map_manager/launch/: map_manager.launch.py
src/agv_map_manager/src/: map_manager_node.cpp
src/agv_map_manager/test/: test_name_validation.cpp  test_zone_persistence.cpp
src/agv_markers/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_markers/config/: markers_registry.yaml
src/agv_markers/src/: marker_correction_node.cpp
src/agv_markers/test/: test_marker_lookup.cpp
src/agv_mode_arbiter/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_mode_arbiter/config/: mode_arbiter_params.yaml
src/agv_mode_arbiter/launch/: mode_arbiter.launch.py
src/agv_mode_arbiter/src/: mode_arbiter_node.cpp
src/agv_mode_arbiter/test/: test_mode_fsm.cpp  test_rail_exit_geometry.cpp
src/agv_navigation/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_navigation/behavior_trees/: navigate_to_pose_forward_only.xml
src/agv_navigation/config/: collision_monitor.yaml  collision_monitor_hil_overrides.yaml  nav2_hil_overrides.yaml  nav2_params.yaml  nav2_params_hil.yaml  slam_toolbox.yaml  slam_toolbox_localization.yaml  velocity_smoother.yaml
src/agv_navigation/docs/: field_tuning_guide.md
src/agv_navigation/launch/: navigation.launch.py
src/agv_navigation/maps/: default_empty.yaml  hil_test_map.yaml
src/agv_odrive/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
src/agv_odrive/agv_odrive/: __init__.py  odrive_can_node.py  odrive_gui.py  simple_test.py
src/agv_odrive/config/: odrive_params.yaml
src/agv_odrive/launch/: odrive.launch.py  odrive_gui.launch.py
src/agv_odrive/scripts/: auto_calibrate.py  calibrate_odom.py  check_odrive_config.py  odrive_can_node.py  odrive_gui.py  (+1 more)
src/agv_rail_approach/: CLAUDE.md  CMakeLists.txt  TASK.yaml  package.xml
(+465 files in other folders)
