<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_bringup</name>
  <version>1.0.0</version>
  <description>AGV composite launch files for teleop, mapping, and fusion modes</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>agv_description</exec_depend>
  <exec_depend>agv_odrive</exec_depend>
  <exec_depend>agv_ui_backend</exec_depend>
  <exec_depend>agv_hil_bridges</exec_depend>
  <exec_depend>agv_zone_detector</exec_depend>
  <exec_depend>agv_rail_driver</exec_depend>
  <exec_depend>agv_mode_arbiter</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
