<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_description</name>
  <version>1.0.0</version>
  <description>AGV URDF/Xacro robot description and TF chain</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>
  <url type="website">https://orzatech.com</url>
  <url type="repository">https://github.com/AndresIslas99/agv-greenhouse</url>
  <url type="bugtracker">https://github.com/AndresIslas99/agv-greenhouse/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
