<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_factor_graph</name>
  <version>1.0.0</version>
  <description>GTSAM factor graph sensor fusion (sliding window iSAM2) — replacement for ekf_global</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>
  <url type="website">https://orzatech.com</url>
  <url type="repository">https://github.com/AndresIslas99/agv-greenhouse</url>
  <url type="bugtracker">https://github.com/AndresIslas99/agv-greenhouse/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gtsam</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
