<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_hw_interface</name>
  <version>0.1.0</version>
  <description>ros2_control SystemInterface plugin for the AGV ODrive CAN driver. Wraps the existing CAN protocol so that diff_drive_controller and mock_components/GenericSystem can drive the robot. Co-exists with agv_odrive — opt-in via the agv_ros2control launch files.</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>
  <url type="website">https://orzatech.com</url>
  <url type="repository">https://github.com/AndresIslas99/agv-greenhouse</url>
  <url type="bugtracker">https://github.com/AndresIslas99/agv-greenhouse/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/agv_hw_interface_plugin.xml"/>
  </export>
</package>
