<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_map_manager</name>
  <version>1.0.0</version>
  <description>C++17 map persistence and zone management for AGV greenhouse</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>
  <url type="website">https://orzatech.com</url>
  <url type="repository">https://github.com/AndresIslas99/agv-greenhouse</url>
  <url type="bugtracker">https://github.com/AndresIslas99/agv-greenhouse/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>agv_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>isaac_ros_visual_slam_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
