<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_mode_arbiter</name>
  <version>0.1.0</version>
  <description>Owns /agv/cmd_vel publication in the 3-mode navigation
  architecture. Relays exactly one of {cmd_vel_nav, cmd_vel_approach,
  cmd_vel_rail} based on zone + operator mode + rail_approach/rail_driver
  state. Eliminates the cmd_vel authorship race documented in
  agv_rail_approach/CLAUDE.md.</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
