<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_odrive</name>
  <version>1.0.0</version>
  <description>ODrive S1 CAN driver with differential drive odometry</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- agv_description is consumed at launch time only (its share dir
       provides config/robot_geometry.yaml — the kinematic SSOT chained
       before odrive_params.yaml in launch/odrive.launch.py). Declared as
       exec_depend so colcon installs agv_description before agv_odrive
       in the colcon graph. -->
  <exec_depend>agv_description</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
